--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Language: es
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
+Imports: 
+    magrittr
+Depends: 
+    R (>= 2.10)
+LazyData: true
